2010-10-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build int] New abstraction: RCS_NORM

	* configure.ac (RCS_NORM): New AC_DEFUN.
	(RCS_ALL): Use ‘RCS_NORM’.
	[DIFF_MAYBE loop expansion]: Likewise.
	[might be unsupported var expansion]: Likewise.

2010-10-16  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Do "sane diff" configure check for all candidates.

	Omission from 2010-03-07, "Move all DIFF*
	config to configure.in; assume diffutils".
	* configure.ac (sane_diff): New shell var.
	(RCS_CHECK_DIFF, DIFF_CLASS): New AC_DEFUNs.
	Use ‘RCS_CHECK_DIFF’ for both user-supplied program via env
	var ‘DIFF’ as well as candidates from ‘DIFF_MAYBE’ in a loop,
	stopping when a sane diff program is found.

2010-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Don't bother with ‘psignal’.

	* configure.ac (AC_CHECK_FUNCS_ONCE): Remove ‘psignal’.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Add configure option ‘--disable-mmap’.

	* configure.ac (mmap): New AC_ARG_ENABLE to
	set shell var ‘use_mmap’, defaulting to ‘yes’.
	(AC_CHECK_HEADERS_ONCE): Move sys/mman.h from here
	to ‘AC_CHECK_HEADERS’, conditionalized on ‘use_mmap’.
	(AC_CHECK_FUNCS_ONCE): Move ‘madvise’, ‘mmap’ from here
	to ‘AC_CHECK_FUNCS’, conditionalized on ‘use_mmap’.
	(rcs_cv_sane_mmap, rcs_cv_mmap_signal): Add ‘use_mmap’
	to surrounding condition; use ‘AS_IF’ there and internally.
	(MMAP_SIGNAL): If ‘rcs_cv_mmap_signal’ is not set, use ‘0’.
	(rcs_mmap_ok): New shell var.
	(PRESUMABLY_STANDARD_ENOUGH_BY_NOW):
	Remove ‘rcs_cv_sane_mmap’; add ‘rcs_mmap_ok’.

2010-10-13  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Tidy up configure.ac a bit.

	* configure.ac (AC_CHECK_FUNCS_ONCE): Remove ‘getcwd’,
	‘mkstemp’, ‘sigaction’, ‘sigblock’, ‘strsignal’, ‘waitpid’.
	(SIG_ZAPS_HANDLER): Delete RCS_CBOOL, associated
	var ‘rcs_cv_sig_zaps’, and the check that sets it.
	(rcs_slsl_is_sl, rcs_cv_slsl_is_sl): Delete unused vars.
	(rcs_have_psignal_or_strsignal): Likewise.