@@ -97,9 +97,6 @@ enum kwsub
 /* Can ‘rename (A, B)’ falsely report success?  */
 #define bad_NFS_rename 0
 
-/* Does ‘setreuid’ work?  See top-level README.  */
-#define has_setreuid 0
-
 /* Might NFS be used?  */
 #define has_NFS 1
 
