@@ -46,6 +46,11 @@ See the end for copying conditions.
 
 	Most of the portability duties are now handled by gnulib.
 
+    - New configure option: --enable-suid[=setreuid]
+
+	This builds RCS with setuid support (the default).  Optional
+	arg ‘setreuid’ means use setreuid(2) instead of seteuid(2).
+
     - New configure option: --disable-mmap
 
 	This builds RCS without mmap(2), even if available.  See README.
