@@ -1,3 +1,10 @@
+2010-10-17  Thien-Thi Nguyen  <ttn@gnuvola.org>
+
+	[build] Add configure option: --enable-suid[=setreuid]
+
+	* b-excwho.c (set_uid_to): Use ‘HAVE_SETREUID’.
+	* base.h (has_setreuid): Delete #define.
+
 2010-10-15  Thien-Thi Nguyen  <ttn@gnuvola.org>
 
 	[int] Don't bother with ‘psignal’.
